--- a/src/index.html
+++ b/src/index.html
@@ -3,61 +3,29 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>WAY</title>
-    <!-- <meta name="author" content="Alvaro Trigo Lopez" /> -->
-    <!-- <meta name="description" content="fullPage plugin by Alvaro Trigo. Create fullscreen pages fast and simple. One page scroll like iPhone website."/> -->
-    <meta name="keywords" content="fullpage,jquery,alvaro,trigo,plugin,fullscren,screen,full,iphone5,apple" />
+    <title>WAY - What About Youth</title>
+    <!-- Meta Information -->
+    <meta name="author" content="Keshav Dulal" />
+    <meta name="description" content="WAY - What about youth." />
+    <meta name="keywords" content="way, what about youth, kathmandu, nepal, sonam, sherpa" />
     <meta name="Resource-type" content="Document" />
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+
+    <!-- Custom Stylesheets -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/reset.css" />
+
+    <!-- External StyleSheets -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/default-styles.css" />
     <link rel="stylesheet" type="text/css" href="../node_modules/fullpage.js/dist/jquery.fullPage.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="examples.css" /> -->
 
-
-    <style>
-        /* Sections
-        * --------------------------------------- */
-
-        #section0 img,
-        #section1 img {
-            margin: 20px 0 0 0;
-        }
-
-        #section2 img {
-            margin: 20px 0 0 52px;
-        }
-
-        #section3 img {
-            bottom: 0px;
-            position: absolute;
-            margin-left: -420px;
-        }
-
-        .intro p {
-            width: 50%;
-            margin: 0 auto;
-            font-size: 1.5em;
-        }
-
-        .twitter-share-button {
-            position: absolute;
-            z-index: 99;
-            right: 149px;
-            top: 9px;
-        }
-    </style>
-    <!--[if IE]>
-		<script type="text/javascript">
-            var console = { log: function() {} };
-		</script>
-        <![endif]-->
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-
+    <!-- External Scripts -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
-    <script type="text/javascript" src="../node_modules/fullpage.js/dist/jquery.fullPage.js"></script>
-    <!-- <script type="text/javascript" src="examples.js"></script> -->
+    <!-- Local Scripts -->
+    <!-- <script type="text/javascript" src="./app.js"></script> -->
     <script type="text/javascript">
         $(document).ready(function () {
             $('#fullpage').fullpage({
@@ -69,129 +37,87 @@
 
         });
     </script>
-
+    <script type="text/javascript" src="../node_modules/fullpage.js/dist/jquery.fullPage.js"></script>
 </head>
 
 <body>
-
-
-    <!-- <select id="demosMenu">
-        <option selected>Choose Demo</option>
-        <option id="activeSlide">Active section and slide</option>
-        <option id="apple">Apple iPhone demo (animations)</option>
-        <option id="autoHeight">Auto height</option>
-        <option id="autoplayVideoAndAudio">Autoplay Video and Audio</option>
-        <option id="backgrounds">Background images</option>
-        <option id="backgroundsFixed">Fixed fullscreen backgrounds</option>
-        <option id="backgroundVideo">Background video</option>
-        <option id="callbacks">Callbacks</option>
-        <option id="continuousHorizontal">Continuous horizontal</option>
-        <option id="continuousVertical">Continuous vertical</option>
-        <option id="parallax">Parallax</option>
-        <option id="css3">CSS3</option>
-        <option id="dragAndMove">Drag And Move</option>
-        <option id="easing">Easing</option>
-        <option id="fadingEffect">Fading Effect</option>
-        <option id="fixedHeaders">Fixed headers</option>
-        <option id="gradientBackgrounds">Gradient backgrounds</option>
-        <option id="interlockedSlides">Interlocked Slides</option>
-        <option id="looping">Looping</option>
-        <option id="methods">Methods</option>
-        <option id="navigationV">Vertical navigation dots</option>
-        <option id="navigationH">Horizontal navigation dots</option>
-        <option id="noAnchor">No anchor links</option>
-        <option id="normalScroll">Normal scrolling</option>
-        <option id="normalScrollElements">Normal scroll elements</option>
-        <option id="offsetSections">Offset sections</option>
-        <option id="oneSection">One single section</option>
-        <option id="resetSliders">Reset sliders</option>
-        <option id="responsiveAutoHeight">Responsive Auto Height</option>
-        <option id="responsiveHeight">Responsive Height</option>
-        <option id="responsiveWidth">Responsive Width</option>
-        <option id="responsiveSlides">Responsive Slides</option>
-        <option id="scrollBar">Scroll bar enabled</option>
-        <option id="scrollHorizontally">Scroll horizontally</option>
-        <option id="scrollOverflow">Scroll inside sections and slides</option>
-        <option id="scrollOverflowReset">ScrollOverflow Reset</option>
-        <option id="lazyLoad">Lazy load</option>
-        <option id="scrollingSpeed">Scrolling speed</option>
-    </select> -->
-
     <ul id="menu">
         <li data-menuanchor="firstPage">
-            <a href="#firstPage">First slide</a>
+            <a href="#firstPage">Home</a>
         </li>
         <li data-menuanchor="secondPage">
-            <a href="#secondPage">Second slide</a>
+            <a href="#secondPage">Our Services</a>
         </li>
         <li data-menuanchor="3rdPage">
-            <a href="#3rdPage">Third slide</a>
+            <a href="#3rdPage">Our Team</a>
         </li>
         <li data-menuanchor="4thpage">
-            <a href="#4thpage">Fourth slide</a>
+            <a href="#4thpage">Contact Us</a>
         </li>
     </ul>
 
-
     <div id="fullpage">
+
         <div class="section " id="section0">
-            <h1>fullPage.js</h1>
+            <h1>WAY - What About Youth</h1>
             <input type="hidden" name="id" value="1" />
-            <p>Create Beautiful Fullscreen Scrolling Websites</p>
+            <p>We help to find the best in you.</p>
             <!-- <img src="imgs/fullPage.png" alt="fullPage" /> -->
         </div>
-        <div class="section active" id="section1">
-            <div class="slide">
-                <div class="intro">
-                    <h1>Create Sliders</h1>
-                    <p>Not only vertical scrolling but also horizontal scrolling. With fullPage.js you will be able to add horizontal
-                        sliders in the most simple way ever.</p>
-                    <!-- <img src="imgs/slider.png" alt="slider" /> -->
-                </div>
 
+        <div class="section active" id="section1">
+            <!-- <div class="slide"> -->
+            <div class="intro">
+                <h1>Our Services</h1>
+                <span>Soft Skill Training</span>
+                <span>Entrepreneurship Development</span>
+                <span>Leadership Development</span>
+                <span>Communication</span>
+                <span>Group Discussion</span>
+                <!-- <img src="imgs/slider.png" alt="slider" /> -->
             </div>
-            <div class="slide">
-                <div class="intro">
-                    <!-- <img src="imgs/1.png" alt="simple" /> -->
-                    <h1>Simple</h1>
-                    <p>Easy to use. Configurable and customizable.</p>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="intro">
-                    <!-- <img src="imgs/2.png" alt="Cool" /> -->
-                    <h1>Cool</h1>
-                    <p>It just looks cool. Impress everybody with a simple and modern web design!</p>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="intro">
-                    <!-- <img src="imgs/3.png" alt="Compatible" /> -->
-                    <h1>Compatible</h1>
-                    <p>Working in modern and old browsers too! IE 8 users don't have the fault of using that horrible browser!
-                        Lets give them a chance to see your site in a proper way!</p>
-                </div>
-            </div>
+            <!-- </div> -->
+
+            <!-- <div class="slide"> -->
+            <!-- <div class="intro"> -->
+            <!-- <img src="imgs/1.png" alt="simple" /> -->
+            <!-- <h1></h1> -->
+            <!-- <p>Easy to use. Configurable and customizable.</p> -->
+            <!-- </div> -->
+            <!-- </div> -->
+
         </div>
+
         <div class="section" id="section2">
             <div class="intro">
-                <h1>Example</h1>
-                <p>HTML markup example to define 4 sections.</p>
+                <h1>Our Team</h1>
+                <p>Er. Sonam Sherpa</p>
+                <p>Mamata Tamang</p>
+                <p>Er. Sanjay Shrestha</p>
+                <p>Prachi Badu</p>
+                <p>Er. Krijan Gautam</p>
                 <!-- <img src="imgs/example2.png" alt="example" /> -->
             </div>
         </div>
+
         <div class="section" id="section3">
             <div class="intro">
-                <h1>Working On Tablets</h1>
-                <p>
-                    Designed to fit to different screen sizes as well as tablet and mobile devices.
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                </p>
+                <h1>Contact US</h1>
+                <p>For Business inquiries</p>
+                <ul>
+                    <li>
+                        <a href="mailto:way.whataboutyouth@gmail.com?subject=Mail from Our Site" target="_blank">Email Us</a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/whataboutyouth/" target="_blank">Facebook</a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/whataboutyouth" target="_blank">Twitter</a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/whataboutyouth/" target="_blank">Instagram</a>
+                    </li>
+                </ul>
             </div>
             <!-- <img src="imgs/tablets.png" alt="tablets" /> -->
         </div>
