--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>WAY - What About Youth</title>
+
     <!-- Meta Information -->
     <meta name="author" content="Keshav Dulal" />
     <meta name="description" content="WAY - What about youth." />
@@ -13,12 +14,13 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
-    <!-- Custom Stylesheets -->
+    <!-- Others StyleSheets -->
     <link rel="stylesheet" type="text/css" href="../assets/css/reset.css" />
-
-    <!-- External StyleSheets -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/default-styles.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/fa/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="../node_modules/fullpage.js/dist/jquery.fullPage.css" />
+
+    <!-- Custom Stylesheets -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/default-styles.css" />
 
     <!-- External Scripts -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -29,8 +31,7 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('#fullpage').fullpage({
-                // sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', 'whitesmoke', '#ccddff'],
-                sectionsColor: ['#4caf50', '#4BBFC3', '#7BAABE', 'whitesmoke', '#ccddff'],
+                sectionsColor: ['#db3236', '#4885ed', '#3cba54', '#f4c20d', '#ccddff'],
                 anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', 'lastPage'],
                 menu: '#menu',
                 scrollingSpeed: 1000
@@ -44,18 +45,22 @@
 <body>
 
     <div class="menu-container">
-        <ul id="menu">
+        <ul class="styled-menu" id="menu">
             <li data-menuanchor="firstPage">
-                <a href="#firstPage">Home</a>
+                <a href="#firstPage">
+                    <i class="fa fa-home"></i> Home</a>
             </li>
             <li data-menuanchor="secondPage">
-                <a href="#secondPage">Our Services</a>
+                <a href="#secondPage">
+                    <i class="fa fa-gear"></i> Our Services</a>
             </li>
             <li data-menuanchor="3rdPage">
-                <a href="#3rdPage">Our Team</a>
+                <a href="#3rdPage">
+                    <i class="fa fa-address-book"></i> Our Team</a>
             </li>
             <li data-menuanchor="4thpage">
-                <a href="#4thpage">Contact Us</a>
+                <a href="#4thpage">
+                    <i class="fa fa-envelope"></i> Contact Us</a>
             </li>
         </ul>
     </div>
@@ -65,16 +70,31 @@
         <div class="section " id="section0">
             <div class="container">
                 <img src="../assets/images/way-logo.png" alt="WAY" />
-                <h1>What About Youth</h1>
-                <input type="hidden" name="id" value="1" />
-                <p>We help to find the best in you.</p>
+                <h1 id="title">What About Youth</h1>
+                <span>We help to find the best in you.</span>
+                <p class="basic-para">
+                    We strive to empower the youth in our country. We provide trainings, conducts seminars, workshops at different venues targetting
+                    the youth between 18-25 years of age. We provide softskills and leadership trainings as well.
+                </p>
+
+                <div class="clients-row">
+
+                </div>
             </div>
         </div>
 
-        <div class="section active" id="section1">
-            <!-- <div class="slide"> -->
-            <div class="intro">
-                <div class="container">
+        <div class="section active " id="section1 ">
+            <div class="slide ">
+                <div class="intro ">
+                    <div class="container ">
+                        <h1>Our Services</h1>
+                        <span>Soft Skill Training</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="slide ">
+                <div class="container ">
                     <h1>Our Services</h1>
                     <span>Soft Skill Training</span>
                     <span>Entrepreneurship Development</span>
@@ -83,49 +103,109 @@
                     <span>Group Discussion</span>
                 </div>
             </div>
-            <!-- </div> -->
-
-            <!-- <div class="slide"> -->
-            <!-- <div class="intro"> -->
-            <!-- <img src="imgs/1.png" alt="simple" /> -->
-            <!-- <h1></h1> -->
-            <!-- <p>Easy to use. Configurable and customizable.</p> -->
-            <!-- </div> -->
-            <!-- </div> -->
-
         </div>
 
-        <div class="section" id="section2">
-            <div class="container">
-                <div class="intro">
+        <!-- </div> -->
+
+        <div class="section " id="section2 ">
+            <div class="container ">
+                <div class="intro ">
                     <h1>Our Team</h1>
-                    <p>Er. Sonam Sherpa</p>
-                    <p>Mamata Tamang</p>
-                    <p>Er. Sanjay Shrestha</p>
-                    <p>Prachi Badu</p>
-                    <p>Er. Krijan Gautam</p>
+
+                    <div class="team-row">
+
+                        <div class="person-info-container">
+                            <img src="../assets/images/sonam-comp.jpg" alt="Er. Sonam Sherpa" class="img-circle">
+                            <h3 class="text-center">Er. Sonam Sherpa</h3>
+                            <p class="text-center">Co-founder &amp; CEO</p>
+                        </div>
+
+                        <div class="person-info-container">
+                            <img src="../assets/images/mamata-comp.png" alt="Mamata Tamang" class="img-circle">
+                            <h3 class="text-center">Mamata Tamang</h3>
+                            <p class="text-center">Chief Trainer</p>
+                        </div>
+
+                        <div class="person-info-container">
+                            <img src="../assets/images/sanjay-comp.jpg" alt="Sanjay Shrestha" class="img-circle">
+                            <h3 class="text-center">Er. Sanjay Shrestha</h3>
+                            <p class="text-center">Chief Trainer</p>
+                        </div>
+
+                        <div class="person-info-container">
+                            <img src="../assets/images/krijan-comp.jpg" alt="Krijan Gautam" class="img-circle">
+                            <h3 class="text-center">Er. Krijan Gautam</h3>
+                            <p class="text-center">Chief Trainer</p>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
 
 
-        <div class="section" id="section3">
+        <div class="section" id="contacts-page ">
             <div class="container">
                 <div class="intro">
                     <h1>Contact US</h1>
-                    <p>For Business inquiries</p>
-                    <ul>
-                        <li>
-                            <a href="mailto:way.whataboutyouth@gmail.com?subject=Mail from Our Site" target="_blank">Email Us</a>
+                    <p class="basic-para">
+                        Feel free to send your inquiries.</br>
+                        You can reach out to us through almost every other social media platform.</br>
+                        You can send gmail.</br>
+                        You can
+                        <i class="fa fa-thumbs-up"></i> our page on facebook.</br>
+                        Send a tweet on twitter or
+                        <i class="fa fa-heart"></i> our photos in instagram.</br>
+                        You could also watch us on Youtube.
+                    </p>
+                    <ul class="styled-menu contacts-list">
+                        <!-- <li>
+                            <a href="mailto:way.whataboutyouth@gmail.com?subject=Mail from Our Site " target="_blank">
+                                <i class="fa fa-envelope"></i> Email Us</a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/whataboutyouth/" target="_blank">Facebook</a>
+                            <a href="https://www.facebook.com/whataboutyouth/ " target="_blank ">
+                                <i class="fa fa-facebook-official"></i> Facebook</a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/whataboutyouth" target="_blank">Twitter</a>
+                            <a href="https://twitter.com/whataboutyouth " target="_blank ">
+                                <i class="fa fa-twitter-square"></i> Twitter</a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/whataboutyouth/" target="_blank">Instagram</a>
+                            <a href="https://www.instagram.com/whataboutyouth/ " target="_blank ">
+                                <i class="fa fa-instagram"></i> Instagram</a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.youtube.com/" target="_blank ">
+                                <i class="fa fa-youtube-play"></i> Youtube</a>
+                        </li> -->
+
+                        <li>
+                            <a href="mailto:way.whataboutyouth@gmail.com?subject=Mail from Our Site " target="_blank">
+                                <i class="fa fa-envelope"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/whataboutyouth/ " target="_blank ">
+                                <i class="fa fa-facebook-official"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/whataboutyouth " target="_blank ">
+                                <i class="fa fa-twitter-square"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/whataboutyouth/ " target="_blank ">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.youtube.com/" target="_blank ">
+                                <i class="fa fa-youtube-play"></i>
+                            </a>
                         </li>
 
                     </ul>
