master: add event photos i.e more drama

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <img src="../assets/images/way-logo.png" alt="WAY" />
                 <h1 id="title">What About Youth</h1>
-                <span>We help to find the best in you.</span>
+                <span id="motto">We help to find the best in you.</span>
                 <p class="basic-para">
                     We strive to empower the youth in our country. We provide trainings, conducts seminars, workshops at different venues targetting
                     the youth between 18-25 years of age. We provide softskills and leadership trainings as well.
@@ -84,28 +84,42 @@
         </div>
 
         <div class="section active " id="section1 ">
+
             <div class="slide ">
-                <div class="intro ">
-                    <div class="container ">
-                        <h1>Our Services</h1>
-                        <span>Soft Skill Training</span>
-                    </div>
+                <div class="container ">
+                    <h1>Soft Skill Development</h1>
+                    <img src="../assets/images/events/14.jpg" alt="" />
                 </div>
             </div>
 
             <div class="slide ">
                 <div class="container ">
-                    <h1>Our Services</h1>
-                    <span>Soft Skill Training</span>
-                    <span>Entrepreneurship Development</span>
-                    <span>Leadership Development</span>
-                    <span>Communication</span>
-                    <span>Group Discussion</span>
+                    <h1>Entrepreneurship Development</h1>
+                    <img src="../assets/images/events/13.jpg" alt="" />
+                </div>
+            </div>
+
+            <div class="slide ">
+                <div class="container ">
+                    <h1>Leadership Development</h1>
+                    <img src="../assets/images/events/8.jpg" alt="" />
+                </div>
+            </div>
+
+            <div class="slide ">
+                <div class="container ">
+                    <h1>Personality Development</h1>
+                    <img src="../assets/images/events/12.jpg" alt="" />
+                </div>
+            </div>
+
+            <div class="slide ">
+                <div class="container ">
+                    <h1>Public Speaking</h1>
+                    <img src="../assets/images/events/11.jpg" alt="" />
                 </div>
             </div>
         </div>
-
-        <!-- </div> -->
 
         <div class="section " id="section2 ">
             <div class="container ">
@@ -158,28 +172,8 @@
                         <i class="fa fa-heart"></i> our photos in instagram.</br>
                         You could also watch us on Youtube.
                     </p>
-                    <ul class="styled-menu contacts-list">
-                        <!-- <li>
-                            <a href="mailto:way.whataboutyouth@gmail.com?subject=Mail from Our Site " target="_blank">
-                                <i class="fa fa-envelope"></i> Email Us</a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/whataboutyouth/ " target="_blank ">
-                                <i class="fa fa-facebook-official"></i> Facebook</a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/whataboutyouth " target="_blank ">
-                                <i class="fa fa-twitter-square"></i> Twitter</a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/whataboutyouth/ " target="_blank ">
-                                <i class="fa fa-instagram"></i> Instagram</a>
-                        </li>
 
-                        <li>
-                            <a href="https://www.youtube.com/" target="_blank ">
-                                <i class="fa fa-youtube-play"></i> Youtube</a>
-                        </li> -->
+                    <ul class="styled-menu contacts-list">
 
                         <li>
                             <a href="mailto:way.whataboutyouth@gmail.com?subject=Mail from Our Site " target="_blank">
