--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
 
         <div class="section " id="section0">
             <div class="container">
-                <img src="../assets/images/way-logo.png" alt="WAY" />
+                <img class="logo-standard" src="../assets/images/way-logo.png" alt="WAY" />
                 <h1 id="title">What About Youth</h1>
                 <span id="motto">We help to find the best in you.</span>
                 <p class="basic-para">
@@ -78,6 +78,28 @@
                 </p>
 
                 <div class="clients-row">
+
+                    <h2>Our Clients</h2>
+
+                    <div class="img-container">
+                        <img src="../assets/images/clients/kist.png" alt="kist" />
+                    </div>
+
+                    <div class="img-container">
+                        <img src="../assets/images/clients/universal.png" alt="universal" />
+                    </div>
+
+                    <div class="img-container">
+                        <img src="../assets/images/clients/sagarmatha-science.png" alt="bscit" />
+                    </div>
+
+                    <div class="img-container">
+                        <img src="../assets/images/clients/sagarmatha-national.png" alt="snc" />
+                    </div>
+
+                    <div class="img-container">
+                        <img src="../assets/images/clients/sagarmatha-engg.png" alt="sagarmatha engg" />
+                    </div>
 
                 </div>
             </div>
