--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/default-styles.css"/>
 
     <!-- External Scripts -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
     <!-- Local Scripts -->
     <!-- <script type="text/javascript" src="./app.js"></script> -->
