master: fix typos

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div class="section" id="contacts-page ">
         <div class="container">
             <div class="intro">
-                <h1>Contact US</h1>
+                <h1>Contact Us</h1>
                 <p class="basic-para">
                     Feel free to send your inquiries.</br>
                     You can reach out to us through almost every other social media platform.</br>
@@ -220,7 +220,7 @@
                     </li>
 
                     <li>
-                        <a href="https://www.youtube.com/" target="_blank ">
+                        <a href="https://www.youtube.com/channel/UCOohY4loBbRIFdM-IsrEV0w" target="_blank ">
                             <i class="fa fa-youtube-play"></i>
                         </a>
                     </li>
