master: styling tweaks- made it fancy

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <div class="slide ">
             <div class="container ">
-                <h1>Soft Skill Development</h1>
+                <h1 class="text-center">Soft Skill Development</h1>
                 <img src="assets/images/events/14.jpg" alt=""/>
             </div>
         </div>
@@ -147,30 +147,34 @@
     <div class="section " id="section2 ">
         <div class="container ">
             <div class="intro ">
-                <h1>Our Team</h1>
+                <h1 class="text-center">Our Team</h1>
 
                 <div class="team-row">
 
                     <div class="person-info-container">
-                        <img src="assets/images/sonam-comp.jpg" alt="Er. Sonam Sherpa" class="img-circle">
+                        <img id="red-circle" src="assets/images/sonam-comp.jpg" alt="Er. Sonam Sherpa"
+                             class="img-circle">
                         <h3 class="text-center">Er. Sonam Sherpa</h3>
                         <p class="text-center">Co-founder &amp; CEO</p>
                     </div>
 
                     <div class="person-info-container">
-                        <img src="assets/images/mamata-comp.png" alt="Mamata Tamang" class="img-circle">
+                        <img id="blue-circle" src="assets/images/mamata-comp.png" alt="Mamata Tamang"
+                             class="img-circle">
                         <h3 class="text-center">Mamata Tamang</h3>
                         <p class="text-center">Chief Trainer</p>
                     </div>
 
                     <div class="person-info-container">
-                        <img src="assets/images/sanjay-comp.jpg" alt="Sanjay Shrestha" class="img-circle">
+                        <img id="green-circle" src="assets/images/sanjay-comp.jpg" alt="Sanjay Shrestha"
+                             class="img-circle">
                         <h3 class="text-center">Er. Sanjay Shrestha</h3>
                         <p class="text-center">Chief Trainer</p>
                     </div>
 
                     <div class="person-info-container">
-                        <img src="assets/images/krijan-comp.jpg" alt="Krijan Gautam" class="img-circle">
+                        <img id="yellow-circle" src="assets/images/krijan-comp.jpg" alt="Krijan Gautam"
+                             class="img-circle">
                         <h3 class="text-center">Er. Krijan Gautam</h3>
                         <p class="text-center">Chief Trainer</p>
                     </div>
@@ -184,7 +188,7 @@
     <div class="section" id="contacts-page ">
         <div class="container">
             <div class="intro">
-                <h1>Contact Us</h1>
+                <h1 class="text-center">Contact Us</h1>
                 <p class="basic-para">
                     Feel free to send your inquiries.</br>
                     You can reach out to us through almost every other social media platform.</br>
