master: add prachi

--- a/index.html
+++ b/index.html
@@ -169,7 +169,14 @@
                         <img id="green-circle" src="assets/images/sanjay-comp.jpg" alt="Sanjay Shrestha"
                              class="img-circle">
                         <h3 class="text-center">Er. Sanjay Shrestha</h3>
-                        <p class="text-center">Chief Trainer</p>
+                        <p class="text-center">Leadership Trainer</p>
+                    </div>
+
+                    <div class="person-info-container">
+                        <img id="indigo-circle" src="assets/images/prachi-comp.jpg" alt="Prachi Badu"
+                             class="img-circle">
+                        <h3 class="text-center">Prachi Badu</h3>
+                        <p class="text-center">SoftSkill Trainer</p>
                     </div>
 
                     <div class="person-info-container">
