master: update page indexes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       $(document).ready(function () {
         $('#fullpage').fullpage({
           sectionsColor: ['#db3236', '#4885ed', '#3cba54', '#f4c20d', '#ccddff'],
-          anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', 'lastPage'],
+          anchors: ['home', 'services', 'team', 'contact', 'lastPage'],
           menu: '#menu',
           scrollingSpeed: 1000
         });
@@ -46,21 +46,21 @@
 
 <div class="menu-container">
     <ul class="styled-menu" id="menu">
-        <li data-menuanchor="firstPage">
-            <a href="#firstPage">
+        <li data-menuanchor="home">
+            <a href="#home">
                 <i class="fa fa-home"></i> Home</a>
         </li>
-        <li data-menuanchor="secondPage">
-            <a href="#secondPage">
-                <i class="fa fa-gear"></i> Our Services</a>
+        <li data-menuanchor="services">
+            <a href="#services">
+                <i class="fa fa-gear"></i> Services</a>
         </li>
-        <li data-menuanchor="3rdPage">
-            <a href="#3rdPage">
-                <i class="fa fa-address-book"></i> Our Team</a>
+        <li data-menuanchor="team">
+            <a href="#team">
+                <i class="fa fa-address-book"></i> Team</a>
         </li>
-        <li data-menuanchor="4thpage">
-            <a href="#4thpage">
-                <i class="fa fa-envelope"></i> Contact Us</a>
+        <li data-menuanchor="contact">
+            <a href="#contact">
+                <i class="fa fa-envelope"></i> Contact</a>
         </li>
     </ul>
 </div>
